--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="active-box">
             <img class="gelik" src="./img/tahoe.png" alt="Car-X Luxury" />
             <div class="box-in-box">
-              <h3>Mersedes-Benz G-Class G 63</h3>
+              <h3>Chevrolet Tahoe</h3>
               <p>Body: SUV</p>
               <p>Engine: V4, 2482 cm3</p>
               <p>Acceleration: up to 100 km/h8 sec.</p>
